style.css
body {
    margin: 0;
    padding: 25px;
    background: linear-gradient(135deg, #1c1c1c, #3a3a3a);
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100dvh;
  }
  
  
  
  #main-container {
    background-color: rgb(241, 6, 6);
    padding: 30px;
    border-radius: 45px;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 700px; 
    height: 450px; 
    transition: box-shadow 0.3s ease, transform 0.3s ease;
  }
  
  #main-container:hover {
    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.6); /* Skugga under */
    transform: translateY(-10px);
  }

  #reset-container {
    margin-bottom: 25px;
  }
  
  #reset {
    padding: 10px 20px;
    font-size: 18px;
    border-radius:15px;
  }
  
  #middle {
    display: flex;
    gap: 30px;
    margin-bottom: 20px;
    align-items:center;
  }
  
  #sidebar {
    display: flex;
    flex-direction: column;
    gap: 15px;
    align-items:center;
    
  }
  
  #erase {
    padding: 10px;
    font-size: 16px;
    border-radius: 15px;
  }

  #colorpicker {
    padding: 10px;
    font-size: 16px;
    border-radius: 15px;

  }
  
  #grid {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  
  #container {
    display: flex;
    flex-wrap: wrap;
    width: 500px; 
    height: 300px; 
    background-color: white;
    border: 2px solid black;
    border-radius: 20px; 
  }
  
  .square {
    box-sizing: border-box;
    border: 1px solid lightgray;
  }
  
  #bottom {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
  }
  
  #sizeSlider {
    width: 300px; 
  }
  
  #sizeValue {
    font-size: 22px;
    color: black;
  }
  
  

